<?xml version="1.0"?>
<package format="2">
  <name>robozero_description</name>
  <version>0.0.1</version>
  <description>The robozero_description package</description>

  <maintainer email="yukimakura86@gmail.con">yukimakura</maintainer>
  <maintainer email="physalily@gmail.con">physalily</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
